Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11872

vbucket.cc compilation failure on Debian

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0
    • 3.0
    • build
    • Security Level: Public
    • Untriaged
    • Unknown

    Description

      On Debian 7, vbucket.cc fails to compile with:

      /home/buildbot/buildbot_slave/debian-7-x64-master-builder/build/build/ep-engine/src/vbucket.cc:109:66: error: statement-expressions are not allowed outside functions nor in template-argument lists
      /home/buildbot/buildbot_slave/debian-7-x64-master-builder/build/build/ep-engine/src/vbucket.cc:111:65: error: statement-expressions are not allowed outside functions nor in template-argument lists
      /home/buildbot/buildbot_slave/debian-7-x64-master-builder/build/build/ep-engine/src/vbucket.cc:113:65: error: statement-expressions are not allowed outside functions nor in template-argument lists
      /home/buildbot/buildbot_slave/debian-7-x64-master-builder/build/build/ep-engine/src/vbucket.cc:115:65: error: statement-expressions are not allowed outside functions nor in template-argument lists

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              ceej Chris Hillery
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty