MB-11872: Compile failure on (some?) Debian 7 systems

Building from a Debian 7 setup under SmartOS works out of the box,
but one of our builders does not work for some reason. From looking
at the preprocessed file it doesn't define linux like our other
systems do. Extend the test to work for __linux__ and __linux as
well.

Change-Id: I4a7cf304ab8bfddb6cc117e9064165e1eb16b66e
Reviewed-on: http://review.couchbase.org/40297
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chris Hillery <ceej@couchbase.com>